--- a/docs/node/docs/pages/api/account-management.mdx
+++ b/docs/node/docs/pages/api/account-management.mdx
@@ -55,7 +55,7 @@ type GetAccountResult = {
 
 ```ts
 import { tevmGetAccount } from 'tevm/actions'
-import { createTevmNode } from 'tevm/node'
+import { createTevmNode } from 'tevm'
 
 const node = createTevmNode()
 
