--- a/docs/node/docs/pages/api/contracts.mdx
+++ b/docs/node/docs/pages/api/contracts.mdx
@@ -4,7 +4,7 @@ description: Helper utilities for creating and managing smart contracts, includi
 
 # Contract Utilities
 
-The [`@tevm/contract`](https://github.com/evmts/tevm-monorepo/tree/main/packages/contract) package provides powerful utilities for working with [Ethereum smart contracts](https://ethereum.org/en/developers/docs/smart-contracts/), offering type-safe contract interactions and simplified deployment workflows.
+The [`tevm/contract`](https://github.com/evmts/tevm-monorepo/tree/main/packages/contract) package provides powerful utilities for working with [Ethereum smart contracts](https://ethereum.org/en/developers/docs/smart-contracts/), offering type-safe contract interactions and simplified deployment workflows.
 
 ## createContract
 
