--- a/docs/node/docs/pages/api/evm-events.mdx
+++ b/docs/node/docs/pages/api/evm-events.mdx
@@ -31,7 +31,7 @@ type EVMEvent = {
 ## Basic Usage
 
 ```ts
-import { createTevmNode } from 'tevm/node'
+import { createTevmNode } from 'tevm'
 
 const node = createTevmNode()
 const vm = await node.getVm()
