--- a/docs/node/docs/pages/api/tevm-call.mdx
+++ b/docs/node/docs/pages/api/tevm-call.mdx
@@ -13,7 +13,7 @@ The `tevmCall` action is one of the most important APIs in Tevm, covering 90% of
 
 ```ts
 import { tevmCall } from 'tevm/actions'
-import { createTevmNode } from 'tevm/node'
+import { createTevmNode } from 'tevm'
 
 const node = createTevmNode()
 
