--- a/docs/node/docs/pages/examples/forking-mainnet.mdx
+++ b/docs/node/docs/pages/examples/forking-mainnet.mdx
@@ -8,7 +8,7 @@ description: Example on forking a live chain
 ## Basic Fork Setup
 
 ```ts
-import { createTevmNode } from 'tevm/node'
+import { createTevmNode } from 'tevm'
 import { http } from 'viem'
 
 const node = createTevmNode({
