--- a/docs/node/docs/pages/examples/debugger-ui.mdx
+++ b/docs/node/docs/pages/examples/debugger-ui.mdx
@@ -19,7 +19,7 @@ First, create a new Svelte project and install dependencies:
 ```bash
 npm create vite@latest tevm-debugger -- --template svelte-ts
 cd tevm-debugger
-npm install tevm @tevm/contract
+npm install tevm tevm/contract
 ```
 
 ## Components
@@ -29,7 +29,7 @@ npm install tevm @tevm/contract
 <script lang="ts">
   import { onMount, onDestroy } from 'svelte'
   import { createTevmNode } from 'tevm/node'
-  import type { InterpreterStep } from '@tevm/evm'
+  import type { InterpreterStep } from 'tevm/evm'
 
   // Store execution state
   let steps: InterpreterStep[] = []
@@ -313,7 +313,7 @@ npm install tevm @tevm/contract
 ### Storage Viewer Component
 ```svelte
 <script lang="ts">
-  import type { Address } from '@tevm/utils'
+  import type { Address } from 'tevm/utils'
   import { createTevmNode } from 'tevm/node'
 
   export let address: Address
