--- a/docs/node/docs/pages/introduction/installation.mdx
+++ b/docs/node/docs/pages/introduction/installation.mdx
@@ -1,6 +1,6 @@
 ---
 title: Installation & Quickstart
-description: How to install @tevm/node and spin up a simple node quickly
+description: How to install tevm and spin up a simple node quickly
 ---
 
 # Installation & Quickstart
@@ -8,22 +8,22 @@ description: How to install @tevm/node and spin up a simple node quickly
 ## 1. Install
 
 ```sh
-npm install @tevm/node
+npm install tevm
 
 # or
-yarn add @tevm/node
+yarn add tevm
 
 # or
-pnpm add @tevm/node
+pnpm add tevm
 
 # or
-bun add @tevm/node
+bun add tevm
 ```
 
 ## 2. Quick Start
 
 ```ts
-import { createTevmNode } from 'tevm/node'
+import { createTevmNode } from 'tevm'
 
 // Create an instance
 const node = createTevmNode()
